--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/rtc-io/rtc-capture/issues"
   },
-  "homepage": "https://github.com/rtc-io/rtc-capture"
+  "homepage": "https://github.com/rtc-io/rtc-capture",
+  "dependencies": {
+    "rtc-core": "^3.1.0"
+  }
 }
