--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   },
   "devDependencies": {
     "cog": "^1.0.0",
-    "rtc-plugin-nicta-ios": "^1.1.2",
-    "rtc-plugin-temasys": "0.0.2",
+    "rtc-plugin-nicta-ios": "^1.3.4",
+    "rtc-plugin-temasys": "^1.1.0",
     "tape": "^3.0.0",
     "testling": "^1.7.1"
   }
